fix contrast issues

--- a/css/landingstyle.css
+++ b/css/landingstyle.css
@@ -30,7 +30,7 @@ body {
 
 h1 {
   color: white;
-  -webkit-text-stroke: 1px black;
+  background-color: rgba(34, 33, 34, 0.2);
   font-size: 25.46vw;
   margin: 0px;
   padding: 0px;
